Implemented listGames, updated API spec and README
