# services/IOService/APIGateway/main.go
@@ -106,9 +106,10 @@ func main() {
 	router.POST("/game/create", handlerMonad(gameManagement.HandleRequest, true))
 	router.PUT("/game/join", handlerMonad(gameManagement.HandleRequest, true))
 	router.PUT("/game/leave", handlerMonad(gameManagement.HandleRequest, true))
+	router.PUT("/game/leaveAll", handlerMonad(gameManagement.HandleRequest, true))
 	router.GET("/game", handlerMonad(gameManagement.HandleRequest, true))
 	router.PUT("/game", handlerMonad(gameManagement.HandleRequest, true))
-	router.GET("/game/list-games", handlerMonad(gameManagement.HandleRequest, true))
+	router.GET("/game/listGames", handlerMonad(gameManagement.HandleRequest, true))
 
 	router.Run(":8080")
 }
